disable zoom on all devices

--- a/react/public/index.html
+++ b/react/public/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Easily find a restaurant with friends!" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo_small.ico" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
