--- a/react/public/index.html
+++ b/react/public/index.html
@@ -32,5 +32,5 @@
   //     event.stopPropagation(); // maybe useless
   //   }
   // }, { passive: false });
-  document.addEventListener("click", event => { });
+  document.body.addEventListener("click", event => { });
 </script>
