--- a/react/public/index.html
+++ b/react/public/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/logo_small.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Easily find a restaurant with friends!" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
@@ -25,12 +24,12 @@
 </html>
 
 <script>
-  // document.addEventListener("touchstart", event => {
-  //   if (event.touches.length > 1) {
-  //     console.log("stahp, plz no more zoom");
-  //     event.preventDefault();
-  //     event.stopPropagation(); // maybe useless
-  //   }
-  // }, { passive: false });
+  document.addEventListener("touchstart", event => {
+    if (event.touches.length > 1) {
+      console.log("stahp, plz no more zoom");
+      event.preventDefault();
+      event.stopPropagation(); // maybe useless
+    }
+  }, { passive: false });
   document.body.addEventListener("click", event => { });
 </script>
