--- a/react/public/index.html
+++ b/react/public/index.html
@@ -24,12 +24,11 @@
 </html>
 
 <script>
-  document.addEventListener("touchstart", event => {
-    if (event.touches.length > 1) {
-      console.log("stahp, plz no more zoom");
-      event.preventDefault();
-      event.stopPropagation(); // maybe useless
-    }
-  }, { passive: false });
-  document.body.addEventListener("click", event => { });
+  // document.addEventListener("touchstart", event => {
+  //   if (event.touches.length > 1) {
+  //     console.log("stahp, plz no more zoom");
+  //     event.preventDefault();
+  //   }
+  // }, { passive: false });
+  // document.body.addEventListener("click", event => { });
 </script>
