prevent double tap zoom

--- a/react/public/index.html
+++ b/react/public/index.html
@@ -30,5 +30,5 @@
   //     event.preventDefault();
   //   }
   // }, { passive: false });
-  // document.body.addEventListener("click", event => { });
+  document.body.addEventListener("click", event => { });
 </script>
