--- a/react/public/index.html
+++ b/react/public/index.html
@@ -15,7 +15,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Chicken Tinder</title>
+  <title>Findalicious</title>
 </head>
 
 <body>
